@@ -70,6 +70,20 @@ if ![info exists READELFFLAGS] then {
 
 if ![file isdirectory tmpdir] {catch "exec mkdir tmpdir" status}
 
+# Make a symlink from tmpdir/gas/as and tmpdir/gas/ld to the assembler
+# and linker in the build tree, so that we can use a -B option to gcc
+# to force it to use the newly built assembler/linker.
+if {![file isdirectory tmpdir/gas]} then {
+    catch "exec mkdir tmpdir/gas" status
+    if {[file isfile ../gas/as-new]} then {
+	catch "exec ln -s ../../../gas/as-new tmpdir/gas/as" status
+    }
+    if {[file isfile ../ld/ld-new]} then {
+	catch "exec ln -s ../../../ld/ld-new tmpdir/gas/ld" status
+    }
+}
+set gcc_gas_flag "-B[pwd]/tmpdir/gas/"
+
 #
 # binutils_run
 #	run a program, returning the output
